client/my-sites/plans/jetpack-plans/product-lightbox/style.scss
.product-lightbox__modal {
	padding: 0;
	border-radius: 8px; /* stylelint-disable-line scales/radii */
	width: 85%;
	height: auto;
	background-color: #fff;
	transition: all 0.25s ease;
	font-family: Inter, $sans;
	max-width: 1080px;
	max-height: 100%;

	@media ( prefers-reduced-motion: no-preference ) {
		transform: translateY(20px);
	}

	&.ReactModal__Content--after-open {
		transform: translateY(0);
	}

	p {
		margin-bottom: 0.5rem;
	}

	:is(.button[disabled], .button:disabled, .button.disabled) {
		background-color: var(--studio-gray-5);
	}
}

.product-lightbox__modal-overlay {
	background-color: transparent;
	align-items: center;
	display: flex;
	justify-content: center;
	position: fixed;
	top: 0;
	bottom: 0;
	right: 0;
	left: 0;
	transition: background-color 0.35s ease-out;
	z-index: 100200;
	box-sizing: border-box;

	&.ReactModal__Overlay--after-open {
		background-color: rgb(0 0 0 / 70%);
	}
}

.product-lightbox__content-wrapper {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	height: auto;
	position: relative;
}

.product-lightbox__close-button {
	position: absolute;
	right: 1rem;
	top: 1rem;
	cursor: pointer;
	transition: scale 0.2s ease-in;

	&:hover {
		scale: 1.2;
	}
}

.product-lightbox__detail {
	padding: 40px;
	height: 100%;
	width: 60%;
	overflow-y: auto;

	hr {
		margin: 0.75rem 0;
	}
}

.product-lightbox__detail-header {
	align-items: center;
	display: flex;
	justify-content: flex-start;
	margin-bottom: 1rem;

	h2 {
		font-size: 1.5rem;
		font-weight: 700;
		color: #101517;
	}
}

.product-lightbox__product-icon {
	display: flex;
	align-items: center;
	justify-content: center;
	box-sizing: border-box;
	width: 3.25rem;
	height: 3.25rem;
	background: linear-gradient(159.87deg, #f6f6f4 7.24%, #f7f4ea 64.73%, #ddedd5 116.53%);
	border-radius: 4px;
	margin-right: 1rem;
}

.product-lightbox__detail-desc {
	margin-bottom: 0.5rem;
	line-height: 1.5;
	color: #2c3338;
	font-size: 1rem;
}

.product-lightbox__detail-tags {
	margin-bottom: 16px;

	&-label {
		font-weight: 600;
		font-size: $font-body-small;
		margin-right: 6px;
		color: #000;
	}

	&-tag {
		align-items: center;
		display: inline-flex;
		justify-content: center;
		margin-right: 16px;

		span {
			margin-right: 4px;
			top: 2px;
			display: inline-flex;
			position: relative;
		}

		p {
			color: #3c434a;
			font-size: $font-body-small;
			margin: 0;
			position: relative;
			top: 2px;
		}
	}
}

.product-lightbox__detail-list {
	p {
		font-size: $font-body;
		font-weight: 700;
		width: 100%;
		padding: 0.5rem 0;
		margin: 0;
		line-height: 1.25;
		color: #000;
	}

	ul {
		list-style: none;
		margin: 0;
	}

	li {
		background: url(./icons/check.svg) no-repeat 0 2px;
		padding-left: 20px;
		font-weight: 400;
		font-size: $font-body;
		color: #3c434a;
	}

	.foldable-card.card {
		box-shadow: none;
	}

	.foldable-card__content {
		border: none;
	}

	.foldable-card__header {
		min-height: 0;
		font-size: $font-body;
		font-weight: 600;
		font-family: Inter, $sans;
		padding: 0.5rem 0;
	}

	.foldable-card.is-expanded .foldable-card__header {
		min-height: 0;
	}

	.foldable-card.is-expanded .foldable-card__content {
		border: none;
		padding: 0;
	}

	.foldable-card.card.is-expanded {
		margin: 0;
	}
}

.product-lightbox__variants {
	padding: 40px;
	width: 40%;
	background-color: #f6f7f7;
	border-radius: 0 8px 8px 0; /* stylelint-disable-line scales/radii */
}

.product-lightbox__variants-options {
	.form-legend {
		font-weight: 600;
		font-size: $font-body;
		margin-bottom: 0.5rem;
	}

	.form-fieldset {
		margin-bottom: 0;
	}

	.multiple-choice-question__answers {
		margin-top: 1rem;
		margin-bottom: 1rem;
		display: flex;
		flex-direction: row;
	}

	.form-label {
		clear: none;
		cursor: pointer;
		display: inline-block;
		position: relative;
		padding-inline-end: 3rem;
	}

	.form-label input[type="radio"] + span {
		font-weight: 600;
		font-size: 1rem;
		margin-inline-start: 1.75rem;
		white-space: nowrap;
	}

	.form-radio {
		width: 1.2rem;
		height: 1.2rem;
		border: 2px solid var(--color-neutral-10);
	}

	.form-radio:checked::before {
		width: 0.7rem;
		height: 0.7rem;
		margin: 2px;
	}

	.form-radio:checked {
		border: 2px solid var(--color-primary);
	}

	.form-radio:focus {
		&:hover {
			box-shadow: none;
		}

		box-shadow: none;
	}
}

.product-lightbox__variants-content {
	display: flex;
	flex-direction: column;
	height: 100%;
	justify-content: flex-start;

	p {
		font-weight: 600;
		font-size: $font-body;
	}
}

.product-lightbox__variants-plan {
	&-alt-info {
		font-size: $font-body-extra-small;
		color: var(--studio-jetpack-green-50);
		font-weight: 600;
		display: flex;
		align-items: center;
	}

	&-alt-info--dot {
		display: inline-block;
		width: 8px;
		height: 8px;
		background: var(--studio-jetpack-green-50);
		/* stylelint-disable-next-line declaration-property-unit-allowed-list */
		border-radius: 50%;
		margin-inline-end: 4px;
	}

	&-card {
		background-color: #fff;
		border-radius: 8px; /* stylelint-disable-line scales/radii */
		border: 1px solid #008710;
		padding: 1rem;
	}

	&-card-price {
		font-size: 1.5rem;
		font-weight: 700;
		color: #000;
	}

	&-card-old-price {
		color: #101517;
		text-decoration: line-through;
		margin-right: 2px;
	}

	&-card-month-short {
		display: none;
	}
}

.product-lightbox__variants-plan-card-price,
.product-lightbox__variants-plan-card-old-price {
	h4 {
		display: inherit;
	}
	.plan-price__fraction {
		font-weight: inherit;
		font-size: inherit;
		vertical-align: inherit;
	}
	.plan-price__integer {
		margin: 0;
		font-weight: inherit;
	}
	.plan-price__currency-symbol {
		color: inherit;
		font-size: inherit;
		vertical-align: inherit;
	}
	.plan-price.is-original::before {
		content: none;
	}
	.plan-price {
		margin: 0 0.2rem 0 0;
		font-size: inherit;
		line-height: inherit;
		color: inherit;
	}
}

.product-lightbox__variants-grey-label {
	font-size: 0.75rem;
	color: #646970;

	div {
		display: inline-block;
	}

	&.is-placeholder {
		.product-lightbox__variants-plan-card-price {
			@include placeholder( --color-neutral-10 );
		}
	}

	.display-price__billing-time-frame {
		font-size: 0.75rem;
		color: #646970;
	}

	.product-lightbox__variants-timeframe {
		&.is-compact .normal {
			display: none;
		}

		&.is-compact .compact {
			display: inline-block;
		}
	}
}

@media screen and ( max-width: 768px ) and ( orientation: portrait ) {
	.product-lightbox__modal {
		display: flex;
		justify-content: center;
		top: 0;
		right: 0;
		left: 0;
		bottom: 0;
		border-radius: 0;
		width: 100%;
		height: 100%;
	}

	.product-lightbox__content-wrapper {
		padding: 0;
		flex-direction: column;
	}

	.product-lightbox__detail {
		padding: 24px;
		width: auto;
	}

	.product-lightbox__variants {
		border-radius: 0;
		padding: 24px;
		position: relative;
		width: auto;
	}

	.product-lightbox__variants-options {
		margin: 0;
	}

	.product-lightbox__close-button {
		z-index: 1;
		background-color: #fff;
	}
}

@media screen and ( max-height: 630px ) and ( orientation: landscape ) {
	.product-lightbox__modal {
		display: flex;
		border-radius: 0;
		width: 100%;
		height: 100%;
		max-width: 100%;
	}

	.product-lightbox__detail {
		padding: 24px;
		height: auto;
	}
}

@media screen and ( max-height: 365px ) and ( orientation: landscape ) {
	.product-lightbox__variants-options {
		margin-top: 0.25rem;
		margin-bottom: 0.5rem;
	}

	.product-lightbox__variants {
		padding: 1.5rem;
	}
}

.product-lightbox__checkout-button {
	margin-block-start: 1rem;
	margin-block-end: 0;
}

